--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">About</a></li>
 							<!--<li><a href="x.html">Sample Work</a></li>-->
+							<!--<li><a href="x.html">Testimonials</a></li>-->
 							<!--<li><a href="x.html">Freelance Agreement</a></li>　incl. rounds of revision-->
 							<!--<li><a href="x.html">Privacy Policy</a></li>-->
-							<li><a href="https://twitter.com/wabuneiyaku" class="icon fa-twitter"><span class="label">Twitter</span> @wabuneiyaku</a></li>
+							<li><a href="https://twitter.com/wabuneiyaku" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span> @wabuneiyaku</a></li>
 						</ul>
 					</nav>
 
