--- a/index.html
+++ b/index.html
@@ -51,13 +51,20 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h3>連絡しやすく、取引が安心な国内翻訳者でありながら、ネイティブならではの精密度。<br />
-									もともと英語で書かれたのように思われる自然な表現。</h3>
+									<h3>・気軽に連絡のしやすさ。<br />
+									・安心できる国内のお取引。<br />
+									・日本語に精通。流行語から学術用語まで対応。<br />
+									・まるで英訳が原文だと思われる文献の仕上がり！</h3>
 									<!--customer satisfaction and assurance, )-->
 									</header>
 								<a href="#" class="image main"><img src="images/miyajima.jpg" alt="" /></a>
 
-									<p>日本在住歴が10年以上続く、米国生まれ育ちの和英翻訳者でございます。学術論文及び医療やITの文献をはじめとして幅広い翻訳依頼を扱っております。お客様の安心かつ満足のために密に連絡を取り合い、品質の高い翻訳を仕上げます。ご連絡の場合、<a href="#contactInfo">以下のメールアドレス</a>をご利用ください。日本語でもお気楽にお問い合わせください。また、履歴書等はご依頼に応じてお送り致します。</p>
+									<p>米国生まれ、米国育ち、途中から日本留学、和英翻訳者でございます。学術論文及び医療やITの文献をはじめとし、幅広い分野の翻訳を受け付けております。お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。</p>
+									<p>
+									Volume: 3000+ 文字／日<br />
+									Follow-up Service: 納品後、2回までの打ち合わせ及び校正が無料。<br />
+									緊急の場合、週末対応などについても気軽にお問い合わせください。</p>
+									<p>お問い合わせは<a href="#contactInfo">以下のメールアドレス</a>にご連絡ください。日本語のメール、英語のメールどちらでも構いません。また、同じ広島市やその周辺にいる方とは是非お会いして直接お話したいと考えております。よろしくお願い致します。</p>
 							</article>
 
 						<!-- Posts -->
@@ -104,7 +111,7 @@
 							</section>
 							<section>
 								<h3>Payment</h3>
-								<p>日本国内銀行振り込み<br />
+								<p>日本国内銀行振り込み(広島銀行)<br />
 								PayPal(日本円・米ドル)</p>
 							</section>
 						</section>
