--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h3>・気軽に連絡のしやすさ。<br />
-									・安心できる国内のお取引。<br />
-									・日本語に精通。流行語から学術用語まで対応。<br />
+									<h3>・メールでもお電話でも、日本語での連絡が丁寧で取りやすい。<br />
+									・国内のお取引だから安心できる。<br />
+									・言葉に精通している。流行語から学術用語まで対応できる。<br />
 									・まるで英訳が原文だと思われる文献の仕上がり！</h3>
 									<!--customer satisfaction and assurance, )-->
 									</header>
