Temporary fix to resolve <br> issue on mobile site displays

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h3>・メールでもお電話でも、日本語での連絡が丁寧で取りやすい。<br />
-									・国内のお取引だから安心できる。<br />
-									・言葉に精通している。流行語から学術用語まで対応できる。<br />
-									・まるで英訳が原文だと思われる文献の仕上がり！</h3>
+									<h3>メールでもお電話でも、日本語での連絡が丁寧で取りやすい。<br />
+									国内のお取引だから安心できる。<br />
+									言葉に精通している。流行語から学術用語まで対応できる。<br />
+									まるで英訳が原文だと思われる文献の仕上がり！</h3>
 									<!--customer satisfaction and assurance, )-->
 									</header>
 								<a href="#" class="image main"><img src="images/miyajima.jpg" alt="" /></a>
