More small text changes on index

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h3>メールでもお電話でも、日本語での連絡が丁寧で取りやすい。<br />
+									<h3>メールでも電話でも、日本語での連絡が丁寧で取りやすい。<br />
 									国内のお取引だから安心できる。<br />
 									言葉に精通している。流行語から学術用語まで対応できる。<br />
-									まるで英訳が原文だと思われる文献の仕上がり！</h3>
+									まるで英訳が原文だと思われる仕上がり！</h3>
 									<!--customer satisfaction and assurance, )-->
 									</header>
 								<a href="#" class="image main"><img src="images/miyajima.jpg" alt="" /></a>
 
-									<p>米国生まれ、米国育ち、途中から日本留学、和英翻訳者でございます。学術論文及び医療やITの文献をはじめとし、幅広い分野の翻訳を受け付けております。お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。</p>
+									<p>米国生まれ、米国育ち、現在広島在住の和英翻訳者でございます。学術論文及び医療やITの文献をはじめ、幅広い分野の翻訳を受け付けております。お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。</p>
 									<p>
 									Volume: 3000+ 文字／日<br />
 									Follow-up Service: 納品後、2回までの打ち合わせ及び校正が無料。<br />
-									緊急の場合、週末対応などについても気軽にお問い合わせください。</p>
+									緊急の場合、週末対応などについてもお気軽にお問い合わせください。</p>
 									<p>お問い合わせは<a href="#contactInfo">以下のメールアドレス</a>にご連絡ください。日本語のメール、英語のメールどちらでも構いません。また、同じ広島市やその周辺にいる方とは是非お会いして直接お話したいと考えております。よろしくお願い致します。</p>
 							</article>
 
