--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<article class="post featured">
 								<header class="major">
 									<h3>メールでも電話でも、日本語での連絡が丁寧で取りやすい。<br />
-									国内のお取引だから安心できる。<br />
+									国内の取引だから安心できる。<br />
 									言葉に精通している。流行語から学術用語まで対応できる。<br />
 									まるで英訳が原文だと思われる仕上がり！</h3>
 									<!--customer satisfaction and assurance, )-->
