Update to specialization areas, new tracking code

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+			<!-- Global site tag (gtag.js) - Google Analytics -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120435195-1"></script>
+			<script>
+			　　window.dataLayer = window.dataLayer || [];
+			　　function gtag(){dataLayer.push(arguments);}
+			　　gtag('js', new Date());
+
+			　　gtag('config', 'UA-120435195-1');
+			</script>
 	</head>
 	<body class="is-loading">
 
@@ -21,8 +30,11 @@
 					<div id="intro">
 						<h1>和文英訳</h1>
 						<h2>wabuneiyaku</h2>
-						<p>学術論文・医療・ITなど、専門性の高い日本語から英語への翻訳・ローカリゼーションサービス<br />
-						Professional Japanese to English Translation Services</p>
+						<p>学術論文・医療・マーケティング・エンターテインメントなど、<br />
+						専門性の高い日本語から英語への翻訳・ローカリゼーションサービス<br />
+						Professional Japanese to English<br />
+						Translation and Localization Services<br />
+						Academic ・ Medical ・ Marketing ・ Entertainment</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -59,7 +71,7 @@
 									</header>
 								<a href="#" class="image main"><img src="images/miyajima.jpg" alt="" /></a>
 
-									<p>米国生まれ、米国育ち、現在広島在住の和英翻訳者でございます。学術論文及び医療やITの文献をはじめ、幅広い分野の翻訳を受け付けております。お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。</p>
+									<p>米国生まれ、米国育ち、現在広島在住の和英翻訳者でございます。学術論文（医療、心理、教育）及びマーケティングの文献を中心に、さまざまな分野の日英翻訳を受け付けております。慣用句・ユーモア・文化的知識を伝えるために創造力と言葉に柔軟性を必要とする芸術翻訳にも非常に魅力を感じ、エンターテインメントのコンテンツ（小説、ライトノベル、漫画、ゲーム）も頻繁に扱っております。お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。</p>
 									<p>
 									Volume: 3000+ 文字／日<br />
 									Follow-up Service: 納品後、2回までの打ち合わせ及び校正が無料。<br />
