Line breaks and misc add edits to generic and elements

--- a/elements.html
+++ b/elements.html
@@ -455,8 +455,8 @@ print 'It took ' + i + ' iterations to sort the deck.';
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>1234 Somewhere Road #00000<br />
+								Hiroshima, JPN 00000-0000</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -464,7 +464,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">info@wabun.domainnameend</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
