--- a/generic.html
+++ b/generic.html
@@ -81,8 +81,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>1234 Somewhere Road #00000<br />
+								Hiroshima, JPN 00000-0000</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
@@ -90,7 +90,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">info@wabun.domainnameend</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
