--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 						<h2>wabuneiyaku</h2>
 						<p>学術論文・医療・マーケティング・エンターテインメントなど、<br />
 						専門性の高い日本語から英語への翻訳・ローカリゼーションサービス<br />
-						Professional Japanese to English<br />
-						Translation and Localization Services<br />
+						Professional Japanese to English Translation and Localization Services<br />
 						Academic ・ Medical ・ Marketing ・ Entertainment</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
