--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<h1>和文英訳</h1>
 						<h2>wabuneiyaku</h2>
 						<p>学術論文・医療・マーケティング・エンターテインメントなど、<br />
-						専門性の高い日本語から英語への翻訳・ローカリゼーションサービス<br />
-						Professional Japanese to English Translation and Localization Services<br />
+						専門性の高い日本語から英語への翻訳・ローカリゼーションサービス</p>
+						<p>Professional Japanese to English Translation and Localization Services<br />
 						Academic ・ Medical ・ Marketing ・ Entertainment</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
