--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; wabuneiyaku, 2017. All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; wabuneiyaku, 2017-2018. All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
