--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>和文英訳:wabuneiyaku, Professional Japanese to English Services</title>
+		<title>和文英訳:wabuneiyaku, Award-Winning Japanese to English Services</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,12 +30,12 @@
 					<div id="intro">
 						<h1>和文英訳</h1>
 						<h2>wabuneiyaku</h2>
-						<p>学術論文・医療・マーケティング・エンターテインメントなど、<br />
-						専門性の高い日本語から英語への翻訳・ローカリゼーションサービス</p>
-						<p>Professional Japanese to English Translation and Localization Services<br />
-						Academic ・ Medical ・ Marketing ・ Entertainment</p>
+						<p>エンターテインメント・マーケティング・学術論文・医療など、受賞歴あり。<br />
+						日本語から英語への翻訳及び英文ライティングサービス</p>
+						<p>Award-Winning Japanese to English Translation and English Writing Services<br />
+						Entertainment ・ Marketing ・ Academic ・ Medical</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Learn More</a></li>
 						</ul>
 					</div>
 
@@ -50,7 +50,7 @@
 							<li class="active"><a href="index.html">About</a></li>
 							<!--<li><a href="x.html">Sample Work</a></li>-->
 							<!--<li><a href="x.html">Testimonials</a></li>-->
-							<!--<li><a href="x.html">Freelance Agreement</a></li>　incl. rounds of revision-->
+							<!--<li><a href="x.html">Freelance Agreement</a></li>-->
 							<!--<li><a href="x.html">Privacy Policy</a></li>-->
 							<li><a href="https://twitter.com/wabuneiyaku" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span> @wabuneiyaku</a></li>
 						</ul>
@@ -70,12 +70,8 @@
 									</header>
 								<a href="#" class="image main"><img src="images/miyajima.jpg" alt="" /></a>
 
-									<p>米国生まれ、米国育ち、現在広島在住の和英翻訳者でございます。学術論文（医療、心理、教育）及びマーケティングの文献を中心に、さまざまな分野の日英翻訳を受け付けております。慣用句・ユーモア・文化的知識を伝えるために創造力と言葉に柔軟性を必要とする芸術翻訳にも非常に魅力を感じ、エンターテインメントのコンテンツ（小説、ライトノベル、漫画、ゲーム）も頻繁に扱っております。お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。</p>
-									<p>
-									Volume: 3000+ 文字／日<br />
-									Follow-up Service: 納品後、2回までの打ち合わせ及び校正が無料。<br />
-									緊急の場合、週末対応などについてもお気軽にお問い合わせください。</p>
-									<p>お問い合わせは<a href="#contactInfo">以下のメールアドレス</a>にご連絡ください。日本語のメール、英語のメールどちらでも構いません。また、同じ広島市やその周辺にいる方とは是非お会いして直接お話したいと考えております。よろしくお願い致します。</p>
+									<p>米国生まれ、米国育ち、西日本を中心に活躍している和英翻訳者・英文ライターでございます。エンターテインメント及びマーケティングの文献を中心に、さまざまな分野のご依頼を受け付けております。漫画翻訳にて、担当している作品の英語版が米国コミックス業界大賞のアイズナー賞・ハーヴェイ賞を受賞しており、また、翻訳者同士が競い合うJAT新人翻訳者コンテスト及び漫画翻訳コンテストでも光栄を頂いております。
+									<p>	慣用句・ユーモア・文化的知識を伝えるために創造力と言葉に柔軟性を必要とする芸術翻訳にも非常に魅力を感じ、お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。お問い合わせは<a href="#contactInfo">以下のメールアドレス</a>にご連絡ください。日本語のメール、英語のメールどちらでも構いません。よろしくお願い致します。</p>
 							</article>
 
 						<!-- Posts -->
@@ -114,6 +110,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
+								<p>Fukuoka, Japan</p>
 								<p>Hiroshima, Japan</p>
 							</section>
 							<section>
@@ -123,7 +120,7 @@
 							<section>
 								<h3>Payment</h3>
 								<p>日本国内銀行振り込み(広島銀行)<br />
-								PayPal(日本円・米ドル)</p>
+								PayPal、WISEなどに対応しております。</p>
 							</section>
 						</section>
 						
@@ -148,7 +145,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; wabuneiyaku, 2017-2018. All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; wabuneiyaku, 2017-2023. All rights reserved.</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
