--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
-								<p>Fukuoka, Japan</p>
-								<p>Hiroshima, Japan</p>
+								<p>Western Japan (Fukuoka, Hiroshima)</p>
 							</section>
 							<section>
 								<h3>Time Zone</h3>
