--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 					<div id="intro">
 						<h1>和文英訳</h1>
 						<h2>wabuneiyaku</h2>
-						<p>エンターテインメント・マーケティング・学術論文・医療など、受賞歴あり。
-						<br>日本語から英語への翻訳及び英文ライティングサービス。</p>
-						<p>Award-Winning Japanese to English Translation and English Writing Services
-						<br>Entertainment ・ Marketing ・ Academic ・ Medical</p>
+						<p>エンターテインメント・マーケティング・学術論文・医療など、受賞歴あり。</p>
+						<p>日本語から英語への翻訳及び英文ライティングサービス。</p>
+						<p>Award-Winning Japanese to English Translation and English Writing Services</p>
+						<p>Entertainment ・ Marketing ・ Academic ・ Medical</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Learn More</a></li>
 						</ul>
