--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 					<div id="intro">
 						<h1>和文英訳</h1>
 						<h2>wabuneiyaku</h2>
-						<p>エンターテインメント・マーケティング・学術論文・医療など、受賞歴あり。<br>
+						<p>エンターテインメント・マーケティング・学術論文など、受賞歴あり。<br>
 						日本語から英語への翻訳及び英文ライティングサービス。</p>
 						<p>Award-Winning Japanese to English Translation and English Writing Services.</p>
-						<p>Entertainment ・ Marketing ・ Academic ・ Medical</p>
+						<p>Entertainment ・ Marketing ・ Academic</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Learn More</a></li>
 						</ul>
@@ -70,7 +70,7 @@
 									</header>
 								<a href="#" class="image main"><img src="images/miyajima.jpg" alt="" /></a>
 
-									<p>米国生まれ、米国育ち、西日本を中心に活躍している和英翻訳者・英文ライターでございます。エンターテインメント及びマーケティングの文献を中心に、さまざまな分野のご依頼を受け付けております。漫画翻訳にて、担当している作品の英語版が米国コミックス業界大賞のアイズナー賞・ハーヴェイ賞を受賞しており、また、翻訳者同士が競い合うJAT新人翻訳者コンテスト及び漫画翻訳コンテストでも光栄を頂いております。
+									<p>米国生まれ、米国育ち、西日本を中心に活躍している和英翻訳者・英文ライターでございます。エンターテインメント及びマーケティングの文献を中心に、さまざまな分野のご依頼を受け付けております。漫画翻訳者として、アメリカン・マンガ・アワードの最優秀翻訳賞を、また、担当している作品の英語版が米国コミックス業界大賞のアイズナー賞・ハーヴェイ賞を受賞しております。翻訳者同士が競い合うJAT新人翻訳者コンテスト及び漫画翻訳コンテストでも光栄を頂いております。
 									<p>	慣用句・ユーモア・文化的知識を伝えるために創造力と言葉に柔軟性を必要とする芸術翻訳にも非常に魅力を感じ、お客様に満足していただけるよう、密に連絡を取り、質の高い翻訳に仕上げます。お問い合わせは<a href="#contactInfo">以下のメールアドレス</a>にご連絡ください。日本語のメール、英語のメールどちらでも構いません。よろしくお願い致します。</p>
 							</article>
 
